[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "pymupump"
version = "0.1.6"
dependencies = [
    "pyserial"
]
requires-python = ">=3.6"
authors = [
  {name = "Raphael Kriegl"},
]

description = "Python interface for controlling Harvard Apparatus Microliter OEM Syringe Pump"
readme = "README.md"
# license = {file = "LICENSE"}
keywords = ["pump control", "harvard apparatus", "microliter OEM"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]

[tool.setuptools]
license-files = []

[project.urls]
Homepage = "https://github.com/rk-exxec/pymupump"
Issues = "https://github.com/rk-exxec/pymupump/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "."
]